Bug 820197 - Fix build warnings in accessible. r=surkov